@@ -137,6 +137,19 @@ Linear scaling module, primarily used for conversion of touch screen co\-ordinat
 .sp -1
 .IP \(bu 2.3
 .\}
+\fBrot\fR
+.sp
+Rotation of touch coorinates. 0=no, 1=CW, 2=UD, 3=CCW. Default: the screen-rotation that was used with ts_calibrate (-r option).
+.RE
+.sp
+.RS 4
+.ie n \{\
+\h'-04'\(bu\h'+03'\c
+.\}
+.el \{\
+.sp -1
+.IP \(bu 2.3
+.\}
 \fBxyswap\fR
 .sp
 Interchange the X and Y co\-ordinates \-\- no longer used or needed if the new linear calibration utility ts_calibrate is used.
