@@ -36,7 +36,7 @@ ts_calibrate \- A test program to calibrate a touch screen used by tslib\&.
 \fB\-r, \-\-rotate [value]\fR
 .sp
 .RS 4
-Rotate the screen. value is 0 for 0 degree, 1 for 90 degrees (CW), 2 for 180 degrees (upside down) and 3 for 270 degrees (CCW).
+Rotate the screen. value is 0 for 0 degree, 1 for 90 degrees (CW), 2 for 180 degrees (upside down) and 3 for 270 degrees (CCW). This value will be added to the calibration config file TSLIB_CALIBFILE and picked up from the linear filter module from there. It can be changed by a linear module parameter.
 .RE
 .PP
 
