@@ -1,8 +1,13 @@
 
+tslib 1.18 - unreleased
+================================
+This release includes libts version 0.9.3 and the following changes:
+* support for screen-rotation in ts_calibrate and linear module
+
+
 tslib 1.17 - released 2018-09-06
 ================================
 This release includes libts version 0.9.2 and the following changes:
-
 * improved backwards compatibility for ts_uinput and the library
 * added support for cmake build system
 
